HEAD only (unreleased)

  Others

    - CMFWiki: The package as distributed with CMF itself has been
      deprecated and removed. Please use the better-supported 
      CMFWiki package that comes as part of Simon Michael's ZWiki
      package. More information at http://zwiki.org.

  Bug Fixes

    - Document/NewsItem: If the "plain text" format is selected the 
      content will no longer be tested for HTML and reduced to text
      between opening and closing "body" tags
      (http://www.zope.org/Collectors/CMF/214)

    - Document/NewsItem: A call to setFormat will now re-cook the
      document content if the format has been changed (arising from
      discussion about http://www.zope.org/Collectors/CMF/214)

    - DirectoryViews/FSMetadata: Corrected some erroneous docstrings
      about proxy role handling using .metadata files 
      (http://www.zope.org/Collectors/CMF/177)

    - FSDTMLMethod: Small code cleanup to remove duplicate variable
      definition (http://www.zope.org/Collectors/CMF/291)

  Features:

    - RegistrationTool: The regular expression that limits what people 
      can put in as a valid member ID is now configurable TTW in the 
      portal_registration tool (http://www.zope.org/Collectors/CMF/117)

  Removed Features

    - CatalogTool: Removed deprecated indexes and metadata.
      'Creator' was replaced by 'listCreators', 'portal_type' should be used
      instead of 'meta_type'.

    - CMFCore: Removed some deprecated aliases and constants.

    - Permissions: Removed deprecated oldstyle permission modules.

    - TypeInformation: Removed deprecated Type method.

    - PortalFolder: Removed deprecated _morphSpec() and spec arguments.

    - Portal Types: Removed deprecated _getViewFor / getActionById machinery.
      PortalContent objects might be used as methods, so __call__() still
      returns their default view.

    - CMFDefault and CMFTopic skins: Removed deprecated DTML skins and layers.
